clusters/k3s-office/infrastructure/ingress/redirect-middleware-harbor.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: harbor
spec:
  redirectScheme:
    scheme: https
    permanent: true
