clusters/k3s-office/infrastructure/ingress/harbor-http-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-http-redirect
  namespace: harbor
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: harbor-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: hb.k3s.hlqs.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: harbor
                port:
                  number: 80
