clusters/k3s-office/infrastructure/ingress/prometheus-http-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-http-redirect
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: pm.k3s.hlqs.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
